# BOT_PHOTO_TEST

./: pyproject.toml
bot_photo_test/: bot.py  data.py  keyboards.py  settings.py
